// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatIntegrationQuickReplies component should render defaults because there is no quick replies in the integration 1`] = `
<Connect(ChatIntegrationQuickReplies)
  integration={
    Immutable.Map {
      "name": "my chat integration",
      "meta": Immutable.Map {},
      "decoration": Immutable.Map {
        "introduction_text": "this is an intro",
        "input_placeholder": "type something please",
        "main_color": "#123456",
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  updateOrCreateIntegration={[Function]}
>
  <ChatIntegrationQuickReplies
    integration={
      Immutable.Map {
        "name": "my chat integration",
        "meta": Immutable.Map {},
        "decoration": Immutable.Map {
          "introduction_text": "this is an intro",
          "input_placeholder": "type something please",
          "main_color": "#123456",
        },
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateOrCreateIntegration={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/undefined"
              >
                Chat
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              my chat integration
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Quick replies
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header "
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/undefined"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Chat
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  my chat integration
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Quick replies
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
        </div>
      </PageHeader>
      <ChatIntegrationNavigation
        integration={
          Immutable.Map {
            "name": "my chat integration",
            "meta": Immutable.Map {},
            "decoration": Immutable.Map {
              "introduction_text": "this is an intro",
              "input_placeholder": "type something please",
              "main_color": "#123456",
            },
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".0"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/appearance"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Appearance
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".1"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/installation"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Installation
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".2"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".3"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/campaigns"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Campaigns
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".4"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/quick-replies"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Quick replies
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </ChatIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <Row
            tag="div"
          >
            <div
              className="row"
            >
              <Col
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col"
                >
                  <Form
                    onSubmit={[Function]}
                    tag="form"
                  >
                    <form
                      className=""
                      onSubmit={[Function]}
                    >
                      <div
                        className="mb-4"
                      >
                        <h4>
                          Quick replies
                        </h4>
                        <p>
                          When a customer opens the chat, select the quick replies the customer can click on.
                        </p>
                        <div
                          className="mb-3"
                        >
                          <BooleanField
                            label="Enable quick replies"
                            name="quickRepliesEnabled"
                            onChange={[Function]}
                            type="checkbox"
                            value={false}
                          >
                            <FormGroup
                              check={true}
                              className=""
                              color=""
                              tag="div"
                            >
                              <div
                                className="form-check"
                                color=""
                              >
                                <Label
                                  check={true}
                                  className="control-label"
                                  htmlFor="id-quickRepliesEnabled"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="control-label form-check-label "
                                    htmlFor="id-quickRepliesEnabled"
                                  >
                                    <Input
                                      checked={false}
                                      className="form-check-input"
                                      id="id-quickRepliesEnabled"
                                      onChange={[Function]}
                                      type="checkbox"
                                    >
                                      <input
                                        checked={false}
                                        className="form-check-input form-check-input"
                                        id="id-quickRepliesEnabled"
                                        onChange={[Function]}
                                        type="checkbox"
                                      />
                                    </Input>
                                    <span
                                      style={
                                        Object {
                                          "verticalAlign": "middle",
                                        }
                                      }
                                    >
                                      Enable quick replies
                                    </span>
                                  </label>
                                </Label>
                              </div>
                            </FormGroup>
                          </BooleanField>
                        </div>
                      </div>
                      <ListField
                        className="mb-5"
                        items={
                          Immutable.List [
                            "Get order status",
                            "Apply promo code",
                          ]
                        }
                        maxItems={3}
                        maxLength={20}
                        onChange={[Function]}
                      >
                        <div
                          className="mb-5"
                        >
                          <Row
                            className="mb-3 form-row"
                            key="0"
                            tag="div"
                          >
                            <div
                              className="mb-3 form-row row"
                            >
                              <Col
                                className="flex-grow"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="flex-grow col"
                                >
                                  <InputField
                                    maxLength={20}
                                    name="item-0"
                                    onChange={[Function]}
                                    placeholder="Type something (limited to 20 characters)"
                                    required={true}
                                    type="text"
                                    value="Get order status"
                                  >
                                    <FormGroup
                                      className="InputField required"
                                      color=""
                                      tag="div"
                                    >
                                      <div
                                        className="InputField required form-group"
                                        color=""
                                      >
                                        <div
                                          className=""
                                        >
                                          <Input
                                            className=""
                                            id="id-item-0"
                                            maxLength={20}
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            type="text"
                                            value="Get order status"
                                          >
                                            <input
                                              className="form-control"
                                              id="id-item-0"
                                              maxLength={20}
                                              onChange={[Function]}
                                              placeholder="Type something (limited to 20 characters)"
                                              required={true}
                                              type="text"
                                              value="Get order status"
                                            />
                                          </Input>
                                        </div>
                                      </div>
                                    </FormGroup>
                                  </InputField>
                                </div>
                              </Col>
                              <Col
                                className="d-flex col-sm-auto"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="d-flex col-sm-auto col"
                                >
                                  <Button
                                    color="secondary"
                                    onClick={[Function]}
                                    size="sm"
                                    tag="button"
                                    type="button"
                                  >
                                    <button
                                      className="btn btn-secondary btn-sm"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <i
                                        className="material-icons md-2 text-danger"
                                      >
                                        delete
                                      </i>
                                    </button>
                                  </Button>
                                </div>
                              </Col>
                            </div>
                          </Row>
                          <Row
                            className="mb-3 form-row"
                            key="1"
                            tag="div"
                          >
                            <div
                              className="mb-3 form-row row"
                            >
                              <Col
                                className="flex-grow"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="flex-grow col"
                                >
                                  <InputField
                                    maxLength={20}
                                    name="item-1"
                                    onChange={[Function]}
                                    placeholder="Type something (limited to 20 characters)"
                                    required={true}
                                    type="text"
                                    value="Apply promo code"
                                  >
                                    <FormGroup
                                      className="InputField required"
                                      color=""
                                      tag="div"
                                    >
                                      <div
                                        className="InputField required form-group"
                                        color=""
                                      >
                                        <div
                                          className=""
                                        >
                                          <Input
                                            className=""
                                            id="id-item-1"
                                            maxLength={20}
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            type="text"
                                            value="Apply promo code"
                                          >
                                            <input
                                              className="form-control"
                                              id="id-item-1"
                                              maxLength={20}
                                              onChange={[Function]}
                                              placeholder="Type something (limited to 20 characters)"
                                              required={true}
                                              type="text"
                                              value="Apply promo code"
                                            />
                                          </Input>
                                        </div>
                                      </div>
                                    </FormGroup>
                                  </InputField>
                                </div>
                              </Col>
                              <Col
                                className="d-flex col-sm-auto"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="d-flex col-sm-auto col"
                                >
                                  <Button
                                    color="secondary"
                                    onClick={[Function]}
                                    size="sm"
                                    tag="button"
                                    type="button"
                                  >
                                    <button
                                      className="btn btn-secondary btn-sm"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <i
                                        className="material-icons md-2 text-danger"
                                      >
                                        delete
                                      </i>
                                    </button>
                                  </Button>
                                </div>
                              </Col>
                            </div>
                          </Row>
                          <Button
                            color="secondary"
                            onClick={[Function]}
                            size="sm"
                            tag="button"
                          >
                            <button
                              className="btn btn-secondary btn-sm"
                              onClick={[Function]}
                              type="button"
                            >
                              <i
                                className="material-icons md-2"
                              >
                                add
                              </i>
                            </button>
                          </Button>
                        </div>
                      </ListField>
                      <div>
                        <Button
                          className=""
                          color="success"
                          disabled={false}
                          tag="button"
                          type="submit"
                        >
                          <button
                            className="btn btn-success"
                            disabled={false}
                            onClick={[Function]}
                            type="submit"
                          >
                            Save changes
                          </button>
                        </Button>
                      </div>
                    </form>
                  </Form>
                </div>
              </Col>
              <Col
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col"
                >
                  <ChatIntegrationPreview
                    introductionText="this is an intro"
                    isOnline={true}
                    mainColor="#123456"
                    name="my chat integration"
                    quickReplies={
                      Array [
                        "Get order status",
                        "Apply promo code",
                      ]
                    }
                    translatedTexts={
                      Object {
                        "actionPostbackError": "An error occurred while processing your action. Please try again.",
                        "autoResponderText": "We're away at the moment. Leave us your email and we'll follow up shortly.",
                        "backLabelBackInAMinute": "Back in 1 minute",
                        "backLabelBackInAnHour": "Back in 1 hour",
                        "backLabelBackInDays": "Back in {value} days",
                        "backLabelBackInHours": "Back in {value} hours",
                        "backLabelBackInMinutes": "Back in {value} minutes",
                        "backLabelBackTomorrow": "Back tomorrow",
                        "campaignClickToReply": "Click to reply",
                        "clickToRetry": "Message not delivered. Click to retry.",
                        "conversationTimestampHeaderFormat": "MMMM D",
                        "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
                        "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
                        "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
                        "emailCaptureOnlineTriggerText": "Leave us your email in case we reply later.",
                        "emailCapturePlaceholder": "your@email.com",
                        "fetchHistory": "Load more",
                        "fetchingHistory": "Retrieving history...",
                        "headerText": "Gorgias Team",
                        "inputPlaceholder": "Type a message...",
                        "introductionText": "How can we help?",
                        "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
                        "messageDelivered": "Delivered",
                        "messageError": "An error occurred while sending your message. Please try again.",
                        "messageIndicatorTitlePlural": "({count}) New messages",
                        "messageIndicatorTitleSingular": "({count}) New message",
                        "messageRelativeTimeDay": "{value}d ago",
                        "messageRelativeTimeHour": "{value}h ago",
                        "messageRelativeTimeJustNow": "Just now",
                        "messageRelativeTimeMinute": "{value}m ago",
                        "messageSending": "Sending...",
                        "messageTimestampFormat": "h:mm A",
                        "offlineIntroductionText": "We'll be back tomorrow",
                        "poweredByGorgias": "Powered by Gorgias",
                        "tapToRetry": "Message not delivered. Tap to retry.",
                        "unsupportedActionType": "Unsupported action type.",
                        "unsupportedMessageType": "Unsupported message type.",
                      }
                    }
                  >
                    <div
                      className="preview"
                    >
                      <div
                        className="titlebar"
                      />
                      <div
                        className="dialog"
                      >
                        <div
                          className="header"
                          style={
                            Object {
                              "backgroundColor": "#123456",
                            }
                          }
                        >
                          <div
                            className="agents"
                          >
                            <div
                              className="agent first"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                }
                              }
                            >
                              <i
                                className="material-icons"
                              >
                                person
                              </i>
                              <div
                                className="onlineMarker"
                              />
                            </div>
                            <div
                              className="agent middle"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                }
                              }
                            >
                              <i
                                className="material-icons"
                              >
                                person
                              </i>
                              <div
                                className="onlineMarker"
                              />
                            </div>
                            <div
                              className="agent last"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                }
                              }
                            >
                              <i
                                className="material-icons"
                              >
                                person
                              </i>
                              <div
                                className="onlineMarker"
                              />
                            </div>
                          </div>
                          <div
                            className="details"
                          >
                            <div
                              className="appName"
                            >
                              my chat integration
                            </div>
                            <div
                              className="introductionText"
                            >
                              this is an intro
                            </div>
                          </div>
                        </div>
                        <div
                          className="content quick-replies-content"
                        >
                          <div
                            className="quick-replies-wrapper"
                          >
                            <button
                              className="btn btn-reply-action reply"
                              key="Get order status-0"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                  "color": "#123456",
                                }
                              }
                            >
                              Get order status
                            </button>
                            <button
                              className="btn btn-reply-action reply"
                              key="Apply promo code-1"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                  "color": "#123456",
                                }
                              }
                            >
                              Apply promo code
                            </button>
                          </div>
                        </div>
                        <div
                          className="poweredby"
                        >
                          Powered by Gorgias
                        </div>
                        <div
                          className="footer"
                        >
                          <div
                            className="placeholder"
                          >
                            Type a message...
                          </div>
                          <i
                            className="icon camera"
                          />
                        </div>
                      </div>
                      <div
                        className="button"
                        style={
                          Object {
                            "backgroundColor": "#123456",
                          }
                        }
                      >
                        <div
                          className="iconWrapper"
                        >
                          <i
                            className="icon"
                          />
                          <div
                            className="shadow"
                          />
                        </div>
                      </div>
                    </div>
                  </ChatIntegrationPreview>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </ChatIntegrationQuickReplies>
</Connect(ChatIntegrationQuickReplies)>
`;

exports[`ChatIntegrationQuickReplies component should render quick replies from the integration 1`] = `
<Connect(ChatIntegrationQuickReplies)
  integration={
    Immutable.Map {
      "name": "my chat integration",
      "meta": Immutable.Map {
        "quick_replies": Immutable.Map {
          "enabled": true,
          "replies": Immutable.List [
            "foo",
            "bar",
          ],
        },
      },
      "decoration": Immutable.Map {
        "introduction_text": "this is an intro",
        "input_placeholder": "type something please",
        "main_color": "#123456",
      },
    }
  }
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  updateOrCreateIntegration={[Function]}
>
  <ChatIntegrationQuickReplies
    integration={
      Immutable.Map {
        "name": "my chat integration",
        "meta": Immutable.Map {
          "quick_replies": Immutable.Map {
            "enabled": true,
            "replies": Immutable.List [
              "foo",
              "bar",
            ],
          },
        },
        "decoration": Immutable.Map {
          "introduction_text": "this is an intro",
          "input_placeholder": "type something please",
          "main_color": "#123456",
        },
      }
    }
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    updateOrCreateIntegration={[Function]}
  >
    <div
      className="full-width"
    >
      <PageHeader
        title={
          <Breadcrumb
            tag="ol"
          >
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations"
              >
                Integrations
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/undefined"
              >
                Chat
              </Link>
            </BreadcrumbItem>
            <BreadcrumbItem
              tag="li"
            >
              my chat integration
            </BreadcrumbItem>
            <BreadcrumbItem
              active={true}
              tag="li"
            >
              Quick replies
            </BreadcrumbItem>
          </Breadcrumb>
        }
      >
        <div
          className="d-flex align-items-center justify-content-between flex-wrap page-header "
        >
          <Breadcrumb
            tag="ol"
          >
            <ol
              className="breadcrumb"
            >
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Integrations
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  <Link
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/integrations/undefined"
                  >
                    <a
                      onClick={[Function]}
                      style={Object {}}
                    >
                      Chat
                    </a>
                  </Link>
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                tag="li"
              >
                <li
                  className="breadcrumb-item"
                >
                  my chat integration
                </li>
              </BreadcrumbItem>
              <BreadcrumbItem
                active={true}
                tag="li"
              >
                <li
                  className="active breadcrumb-item"
                >
                  Quick replies
                </li>
              </BreadcrumbItem>
            </ol>
          </Breadcrumb>
        </div>
      </PageHeader>
      <ChatIntegrationNavigation
        integration={
          Immutable.Map {
            "name": "my chat integration",
            "meta": Immutable.Map {
              "quick_replies": Immutable.Map {
                "enabled": true,
                "replies": Immutable.List [
                  "foo",
                  "bar",
                ],
              },
            },
            "decoration": Immutable.Map {
              "introduction_text": "this is an intro",
              "input_placeholder": "type something please",
              "main_color": "#123456",
            },
          }
        }
      >
        <SecondaryNavbar>
          <Navbar
            className="navbar"
            expand={false}
            tag="nav"
          >
            <nav
              className="navbar navbar"
            >
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".0"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/appearance"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Appearance
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".1"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/installation"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Installation
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".2"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/preferences"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Preferences
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".3"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/campaigns"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Campaigns
                </a>
              </Link>
              <Link
                activeClassName="disabled"
                className="nav-link"
                key=".4"
                onlyActiveOnIndex={false}
                style={Object {}}
                to="/app/settings/integrations/smooch_inside/undefined/quick-replies"
              >
                <a
                  className="nav-link"
                  onClick={[Function]}
                  style={Object {}}
                >
                  Quick replies
                </a>
              </Link>
            </nav>
          </Navbar>
        </SecondaryNavbar>
      </ChatIntegrationNavigation>
      <Container
        className="page-container"
        fluid={true}
        tag="div"
      >
        <div
          className="page-container container-fluid"
        >
          <Row
            tag="div"
          >
            <div
              className="row"
            >
              <Col
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col"
                >
                  <Form
                    onSubmit={[Function]}
                    tag="form"
                  >
                    <form
                      className=""
                      onSubmit={[Function]}
                    >
                      <div
                        className="mb-4"
                      >
                        <h4>
                          Quick replies
                        </h4>
                        <p>
                          When a customer opens the chat, select the quick replies the customer can click on.
                        </p>
                        <div
                          className="mb-3"
                        >
                          <BooleanField
                            label="Enable quick replies"
                            name="quickRepliesEnabled"
                            onChange={[Function]}
                            type="checkbox"
                            value={true}
                          >
                            <FormGroup
                              check={true}
                              className=""
                              color=""
                              tag="div"
                            >
                              <div
                                className="form-check"
                                color=""
                              >
                                <Label
                                  check={true}
                                  className="control-label"
                                  htmlFor="id-quickRepliesEnabled"
                                  tag="label"
                                  widths={
                                    Array [
                                      "xs",
                                      "sm",
                                      "md",
                                      "lg",
                                      "xl",
                                    ]
                                  }
                                >
                                  <label
                                    className="control-label form-check-label "
                                    htmlFor="id-quickRepliesEnabled"
                                  >
                                    <Input
                                      checked={true}
                                      className="form-check-input"
                                      id="id-quickRepliesEnabled"
                                      onChange={[Function]}
                                      type="checkbox"
                                    >
                                      <input
                                        checked={true}
                                        className="form-check-input form-check-input"
                                        id="id-quickRepliesEnabled"
                                        onChange={[Function]}
                                        type="checkbox"
                                      />
                                    </Input>
                                    <span
                                      style={
                                        Object {
                                          "verticalAlign": "middle",
                                        }
                                      }
                                    >
                                      Enable quick replies
                                    </span>
                                  </label>
                                </Label>
                              </div>
                            </FormGroup>
                          </BooleanField>
                        </div>
                      </div>
                      <ListField
                        className="mb-5"
                        items={
                          Immutable.List [
                            "foo",
                            "bar",
                          ]
                        }
                        maxItems={3}
                        maxLength={20}
                        onChange={[Function]}
                      >
                        <div
                          className="mb-5"
                        >
                          <Row
                            className="mb-3 form-row"
                            key="0"
                            tag="div"
                          >
                            <div
                              className="mb-3 form-row row"
                            >
                              <Col
                                className="flex-grow"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="flex-grow col"
                                >
                                  <InputField
                                    maxLength={20}
                                    name="item-0"
                                    onChange={[Function]}
                                    placeholder="Type something (limited to 20 characters)"
                                    required={true}
                                    type="text"
                                    value="foo"
                                  >
                                    <FormGroup
                                      className="InputField required"
                                      color=""
                                      tag="div"
                                    >
                                      <div
                                        className="InputField required form-group"
                                        color=""
                                      >
                                        <div
                                          className=""
                                        >
                                          <Input
                                            className=""
                                            id="id-item-0"
                                            maxLength={20}
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            type="text"
                                            value="foo"
                                          >
                                            <input
                                              className="form-control"
                                              id="id-item-0"
                                              maxLength={20}
                                              onChange={[Function]}
                                              placeholder="Type something (limited to 20 characters)"
                                              required={true}
                                              type="text"
                                              value="foo"
                                            />
                                          </Input>
                                        </div>
                                      </div>
                                    </FormGroup>
                                  </InputField>
                                </div>
                              </Col>
                              <Col
                                className="d-flex col-sm-auto"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="d-flex col-sm-auto col"
                                >
                                  <Button
                                    color="secondary"
                                    onClick={[Function]}
                                    size="sm"
                                    tag="button"
                                    type="button"
                                  >
                                    <button
                                      className="btn btn-secondary btn-sm"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <i
                                        className="material-icons md-2 text-danger"
                                      >
                                        delete
                                      </i>
                                    </button>
                                  </Button>
                                </div>
                              </Col>
                            </div>
                          </Row>
                          <Row
                            className="mb-3 form-row"
                            key="1"
                            tag="div"
                          >
                            <div
                              className="mb-3 form-row row"
                            >
                              <Col
                                className="flex-grow"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="flex-grow col"
                                >
                                  <InputField
                                    maxLength={20}
                                    name="item-1"
                                    onChange={[Function]}
                                    placeholder="Type something (limited to 20 characters)"
                                    required={true}
                                    type="text"
                                    value="bar"
                                  >
                                    <FormGroup
                                      className="InputField required"
                                      color=""
                                      tag="div"
                                    >
                                      <div
                                        className="InputField required form-group"
                                        color=""
                                      >
                                        <div
                                          className=""
                                        >
                                          <Input
                                            className=""
                                            id="id-item-1"
                                            maxLength={20}
                                            onChange={[Function]}
                                            placeholder="Type something (limited to 20 characters)"
                                            required={true}
                                            type="text"
                                            value="bar"
                                          >
                                            <input
                                              className="form-control"
                                              id="id-item-1"
                                              maxLength={20}
                                              onChange={[Function]}
                                              placeholder="Type something (limited to 20 characters)"
                                              required={true}
                                              type="text"
                                              value="bar"
                                            />
                                          </Input>
                                        </div>
                                      </div>
                                    </FormGroup>
                                  </InputField>
                                </div>
                              </Col>
                              <Col
                                className="d-flex col-sm-auto"
                                tag="div"
                                widths={
                                  Array [
                                    "xs",
                                    "sm",
                                    "md",
                                    "lg",
                                    "xl",
                                  ]
                                }
                              >
                                <div
                                  className="d-flex col-sm-auto col"
                                >
                                  <Button
                                    color="secondary"
                                    onClick={[Function]}
                                    size="sm"
                                    tag="button"
                                    type="button"
                                  >
                                    <button
                                      className="btn btn-secondary btn-sm"
                                      onClick={[Function]}
                                      type="button"
                                    >
                                      <i
                                        className="material-icons md-2 text-danger"
                                      >
                                        delete
                                      </i>
                                    </button>
                                  </Button>
                                </div>
                              </Col>
                            </div>
                          </Row>
                          <Button
                            color="secondary"
                            onClick={[Function]}
                            size="sm"
                            tag="button"
                          >
                            <button
                              className="btn btn-secondary btn-sm"
                              onClick={[Function]}
                              type="button"
                            >
                              <i
                                className="material-icons md-2"
                              >
                                add
                              </i>
                            </button>
                          </Button>
                        </div>
                      </ListField>
                      <div>
                        <Button
                          className=""
                          color="success"
                          disabled={false}
                          tag="button"
                          type="submit"
                        >
                          <button
                            className="btn btn-success"
                            disabled={false}
                            onClick={[Function]}
                            type="submit"
                          >
                            Save changes
                          </button>
                        </Button>
                      </div>
                    </form>
                  </Form>
                </div>
              </Col>
              <Col
                tag="div"
                widths={
                  Array [
                    "xs",
                    "sm",
                    "md",
                    "lg",
                    "xl",
                  ]
                }
              >
                <div
                  className="col"
                >
                  <ChatIntegrationPreview
                    introductionText="this is an intro"
                    isOnline={true}
                    mainColor="#123456"
                    name="my chat integration"
                    quickReplies={
                      Array [
                        "foo",
                        "bar",
                      ]
                    }
                    translatedTexts={
                      Object {
                        "actionPostbackError": "An error occurred while processing your action. Please try again.",
                        "autoResponderText": "We're away at the moment. Leave us your email and we'll follow up shortly.",
                        "backLabelBackInAMinute": "Back in 1 minute",
                        "backLabelBackInAnHour": "Back in 1 hour",
                        "backLabelBackInDays": "Back in {value} days",
                        "backLabelBackInHours": "Back in {value} hours",
                        "backLabelBackInMinutes": "Back in {value} minutes",
                        "backLabelBackTomorrow": "Back tomorrow",
                        "campaignClickToReply": "Click to reply",
                        "clickToRetry": "Message not delivered. Click to retry.",
                        "conversationTimestampHeaderFormat": "MMMM D",
                        "emailCaptureOfflineThanksText": "Thanks {email}! We'll get back to you shortly.",
                        "emailCaptureOfflineTriggerText": "We're away, leave us your email and we'll respond shortly.",
                        "emailCaptureOnlineThanksText": "Thanks! We'll email you at {email} if you leave.",
                        "emailCaptureOnlineTriggerText": "Leave us your email in case we reply later.",
                        "emailCapturePlaceholder": "your@email.com",
                        "fetchHistory": "Load more",
                        "fetchingHistory": "Retrieving history...",
                        "headerText": "Gorgias Team",
                        "inputPlaceholder": "Type a message...",
                        "introductionText": "How can we help?",
                        "invalidFileError": "Only images are supported. Choose a file with a supported extension (jpg, jpeg, png, gif, or bmp).",
                        "messageDelivered": "Delivered",
                        "messageError": "An error occurred while sending your message. Please try again.",
                        "messageIndicatorTitlePlural": "({count}) New messages",
                        "messageIndicatorTitleSingular": "({count}) New message",
                        "messageRelativeTimeDay": "{value}d ago",
                        "messageRelativeTimeHour": "{value}h ago",
                        "messageRelativeTimeJustNow": "Just now",
                        "messageRelativeTimeMinute": "{value}m ago",
                        "messageSending": "Sending...",
                        "messageTimestampFormat": "h:mm A",
                        "offlineIntroductionText": "We'll be back tomorrow",
                        "poweredByGorgias": "Powered by Gorgias",
                        "tapToRetry": "Message not delivered. Tap to retry.",
                        "unsupportedActionType": "Unsupported action type.",
                        "unsupportedMessageType": "Unsupported message type.",
                      }
                    }
                  >
                    <div
                      className="preview"
                    >
                      <div
                        className="titlebar"
                      />
                      <div
                        className="dialog"
                      >
                        <div
                          className="header"
                          style={
                            Object {
                              "backgroundColor": "#123456",
                            }
                          }
                        >
                          <div
                            className="agents"
                          >
                            <div
                              className="agent first"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                }
                              }
                            >
                              <i
                                className="material-icons"
                              >
                                person
                              </i>
                              <div
                                className="onlineMarker"
                              />
                            </div>
                            <div
                              className="agent middle"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                }
                              }
                            >
                              <i
                                className="material-icons"
                              >
                                person
                              </i>
                              <div
                                className="onlineMarker"
                              />
                            </div>
                            <div
                              className="agent last"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                }
                              }
                            >
                              <i
                                className="material-icons"
                              >
                                person
                              </i>
                              <div
                                className="onlineMarker"
                              />
                            </div>
                          </div>
                          <div
                            className="details"
                          >
                            <div
                              className="appName"
                            >
                              my chat integration
                            </div>
                            <div
                              className="introductionText"
                            >
                              this is an intro
                            </div>
                          </div>
                        </div>
                        <div
                          className="content quick-replies-content"
                        >
                          <div
                            className="quick-replies-wrapper"
                          >
                            <button
                              className="btn btn-reply-action reply"
                              key="foo-0"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                  "color": "#123456",
                                }
                              }
                            >
                              foo
                            </button>
                            <button
                              className="btn btn-reply-action reply"
                              key="bar-1"
                              style={
                                Object {
                                  "borderColor": "#123456",
                                  "color": "#123456",
                                }
                              }
                            >
                              bar
                            </button>
                          </div>
                        </div>
                        <div
                          className="poweredby"
                        >
                          Powered by Gorgias
                        </div>
                        <div
                          className="footer"
                        >
                          <div
                            className="placeholder"
                          >
                            Type a message...
                          </div>
                          <i
                            className="icon camera"
                          />
                        </div>
                      </div>
                      <div
                        className="button"
                        style={
                          Object {
                            "backgroundColor": "#123456",
                          }
                        }
                      >
                        <div
                          className="iconWrapper"
                        >
                          <i
                            className="icon"
                          />
                          <div
                            className="shadow"
                          />
                        </div>
                      </div>
                    </div>
                  </ChatIntegrationPreview>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Container>
    </div>
  </ChatIntegrationQuickReplies>
</Connect(ChatIntegrationQuickReplies)>
`;
